--- a/termux/source.yaml
+++ b/termux/source.yaml
@@ -43,7 +43,6 @@
   options:
     url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/v2ray/v2raysub
 
-
 # 订阅链接13
 - type: subscribe
   options:
@@ -53,78 +52,42 @@
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ssr/ssrsub
-
  
-    # 订阅链接15
+# 订阅链接15
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ss/sssub
 
-
-   # 订阅链接16
+# 订阅链接16
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
-
 
  # 订阅链接17
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/ssrsub/ssr/master/ssrsub
 
-
 # 订阅链接18
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/ssrsub/ssr/master/ss-sub
-
 
 # 订阅链接19
 - type: subscribe
   options:
     url:  https://raw.githubusercontent.com/ssrsub/ssr/master/V2Ray
 
-
 # 订阅链接20
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/freefq/free/master/v2
 
-    # 订阅链接21
+# 订阅链接21
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/free
 
-  # 订阅链接22
-- type: subscribe
-  options:
-    url: 
-
-# 订阅链接23
-- type: subscribe
-  options:
-    url: 
-
-# 订阅链接24
-- type: subscribe
-  options:
-    url: 
-
-  # 订阅链接25
-- type: subscribe
-  options:
-    url: 
-
-  # 订阅链接26
-- type: subscribe
-  options:
-    url: 
-
-  # 订阅链接27
-- type: subscribe
-  options:
-    url: 
-   
 # 网页模糊抓取3
 - type: webfuzz
   options:
@@ -170,6 +133,31 @@
 # clash格式订阅链接
 - type: clash
   options:
+    url: https://anaer.github.io/Sub/clash.yaml
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://subs.zeabur.app/clash
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://neko-warp.nloli.xyz
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/shirkerboy/scp/main/sub
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://tt.vg/freeclash
+    
+# clash格式订阅链接
+- type: clash
+  options:
     url: https://clashe.eu.org/clash/proxies
 
 # clash格式订阅链接
@@ -185,7 +173,7 @@
 # clash格式订阅链接
 - type: clash
   options:
-    url: 
+    url: http://www.lander.work/clash/proxies
 
 # clash格式订阅链接
 - type: clash
@@ -195,7 +183,7 @@
 # clash格式订阅链接
 - type: clash
   options:
-    url: 
+    url: https://fku-ppg.co.uk/
 
 # clash格式订阅链接
 - type: clash
@@ -215,7 +203,7 @@
 # clash格式订阅链接
 - type: clash
   options:
-    url: 
+    url: https://gitlab.com/mfuu/v2ray/-/raw/master/clash.yaml
 
 # clash格式订阅链接3
 - type: clash
@@ -225,7 +213,7 @@
 # clash格式订阅链接4
 - type: clash
   options:
-    url: 
+    url: https://raw.githubusercontent.com/Aorp2008/Airp_all_box/main/config.yaml
 
 # clash格式订阅链接5
 - type: clash
