--- a/termux/source.yaml
+++ b/termux/source.yaml
@@ -96,19 +96,19 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: ssrList
+    channel: 
     num: 200
 
 # tg频道抓取2
 - type: tgchannel
   options:
-    channel: jingpingziyuanfenxiang
+    channel: 
     num: 200
 
 # 翻墙党论坛抓取
 - type: web-fanqiangdang
   options:
-    url: https://fanqiangdang.com/forum-48-1.html
+    url: 
 
 # clash格式订阅链接
 - type: clash
